--- a/app/package.json
+++ b/app/package.json
@@ -2,19 +2,12 @@
   "name": "app",
   "version": "0.1.0",
   "babel": {
-    "plugins": [
-      "app/babel-plugin-macros.config.ts"
-    ]
+    "plugins": []
   },
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
-    "@fontsource/roboto": "^4.5.3",
-    "@fortawesome/fontawesome-svg-core": "^6.1.0",
-    "@fortawesome/free-regular-svg-icons": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.1.0",
-    "@fortawesome/react-fontawesome": "^0.1.18",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@reduxjs/toolkit": "^1.5.1",
