--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "app",
+  "name": "goat-vote-app",
   "version": "0.1.0",
-  "babel": {
-    "plugins": []
-  },
+  "description": "GOAT list creator",
+  "author": "Max Monis <mmonis77@gmail.com>",
+  "repository": "https://github.com/maxmonis/goat-vote.git",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.8.2",
@@ -56,5 +57,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
