--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "description": "GOAT list creator",
   "author": "Max Monis <mmonis77@gmail.com>",
-  "main": "server.js",
+  "main": "server.ts",
   "repository": "https://github.com/maxmonis/goat-vote.git",
   "license": "MIT",
   "private": true,
   "scripts": {
     "dev": "concurrently \"yarn:serve\" \"cd app && yarn start\"",
-    "start": "node server.js",
-    "serve": "nodemon server.js"
+    "start": "node server.ts",
+    "serve": "nodemon server.ts"
   },
   "dependencies": {
     "axios": "^0.26.1",
@@ -19,7 +19,13 @@
     "mongoose": "^6.2.7"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "concurrently": "^7.0.0",
-    "nodemon": "^2.0.15"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "nodemon": "^2.0.15",
+    "prettier": "2.7.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   }
 }
